<resources>
    <string name="app_name">Hola Salo</string>
    <string name="app_logo">Logo</string>
    <string name="new_word">Create a Word</string>
    <string name="see_library">Look at the Library</string>
    <string name="recent">Recent</string>
    <string name="library">Library</string>
    <string name="word">Word</string>
    <string name="create_word">Create</string>
    <string name="learn">Learn</string>
    <string name="tutorial">Tutorial</string>
    <string name="load">Do you want to upload a picture</string>
    <string name="load_picture">Upload Picture</string>
    <string name="load_video">Upload Video</string>
    <string name="reminder_picture">Upload a picture</string>
    <string name="reminder_video">Upload a video</string>
    <string name="reminder_category">Type the category</string>
    <string name="reminder_word">Type the word you are learning</string>
    <string name="save">Save</string>
    <string name="modify">Modify</string>
    <string name="word_saved">Word %1$s saved!</string>
    <string name="word_deleted">Word %1$s deleted</string>
    <string name="delete">Delete</string>
    <string name="modelete">Modify or Delete</string>
    <string name="modify_word">Modify options</string>
    <string name="delete_cancel">Delete word</string>
    <string name="not_found">Video not found</string>
    <string name="change_video">It is recommended to Modify or Delete</string>
    <string name="suggestion">The permissions for camera and storage are necessary for the correct functioning of the App</string>
    <string name="permissions">Necessary Permissions</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back_icon">Back</string>
    <string name="video_capture">Capture video</string>
    <string name="picture_capture">Take a photo</string>
    <string name="download">Search the Web</string>
    <string name="category_option">Choose category</string>
    <string name="all_category">All categories</string>
    <string name="no_category">No category</string>
    <string name="new_category">New category</string>
    <string name="create_category">Category</string>
    <string-array name="video_option">
        <item>Capture video</item>
        <item>Search in gallery</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="picture_option">
        <item>Take a photo</item>
        <item>Search the Web</item>
        <item>Search in gallery</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="modify_option">
        <item>Modify word</item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="intro">“Hola Salo” is an App for vocabulary learning, through video and picture association. By matching a visual guide from a familiar perspective with simple pictures and words</string>
    <string name="main_screen">The main screen consists of:</string>
    <string name="main_option"> 1.	Create a new element to learn\n
                                2.	Look through created elements\n
                                3.	Modify or delete elements\n
                                4.	Recently added elements\n
                                5.	A side menu\n
                                6.	App\'s tutorial</string>
    <string name="tut_create">When creating a new element, you match it with:</string>
    <string name="create_options">A word which can be an object or an action\n\n
                                A new category to which the word belongs or you can choose from a list in the drop-down menu</string>
    <string name="tut_video_item">A video that represents the word or shows the person who is teaching</string>
    <string name="tut_video">When uploading a video, you can capture it from camera or add a previously recorded video from the device</string>
    <string name="tut_image_item">A picture (optional if the video shows the person)</string>
    <string name="tut_image">The picture can be captured from camera, downloaded from the web or uploaded from the device storage.\n\n
                                If no picture is added, you can save without one</string>
    <string name="tut_permissions">To be able to capture pictures and videos or accessing them from storage these permissions are necessary, if they are not allowed the App won’t work properly</string>
    <string name="tut_library">In the Library menu you can find all the elements that have been created so far and in the home screen you will see most recent two\n\n
                                You can see all the words or search by category</string>
    <string name="tut_modify">In the modify or delete menu you can see every element in library, when you click on any element you can modify it or delete it</string>
    <string name="tut_player">When clicking on any element you\'ll see these items:</string>
    <string name="player_option">1.	An associated picture, if there is one\n
                                    2.	Play the video\n
                                    3.	Congratulations on learning a word</string>
    <string name="player_face">When playing the video, you will see it like this</string>
    <string name="player_types">As on the left, a person saying the word and a picture that represents it\n\n
                                Or as on the right, a video that shows the word, without a picture\n\n
                                In any case you must listen to a voice saying the word to learn</string>
    <string name="side_menu">The side menu on the home screen provides options for capturing videos and pictures, or downloading images from the web for later use in creating words</string>
    <string name="help_menu">And the help Icon takes you to the tutorial you just went through</string>
    <string name="letsgo">¡It\'s time to start Creating and Learning!</string>
</resources>