<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TFinalFragment"
    android:background="@color/yellow">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <ImageView
            android:id="@+id/imvLetsGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/letsgo"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/txtLetsGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imvLetsGo"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/letsgo"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/salir"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/exit"/>

</RelativeLayout>