<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celeste"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvIcono"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/ic_face" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txtApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/shortstack_regular"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnPalabra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_newword"
            android:drawableStart="@drawable/ic_pencil"
            android:fontFamily="@font/shortstack_regular"
            android:gravity="center"
            android:onClick="crearPalabra"
            android:paddingHorizontal="20dp"
            android:text="@string/new_word"
            android:textAllCaps="false"
            android:textColor="@color/violet"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <Button
            android:id="@+id/btnBiblioteca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_newword"
            android:drawableStart="@drawable/ic_book"
            android:fontFamily="@font/shortstack_regular"
            android:gravity="center"
            android:onClick="verBiblioteca"
            android:paddingHorizontal="20dp"
            android:text="@string/see_library"
            android:textAllCaps="false"
            android:textColor="@color/violet"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>