<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celeste"
    tools:context=".CrearActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvIcono"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/ic_face" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txtApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/shortstack_regular"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnRegresar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"

        android:background="@drawable/ic_back"
        android:contentDescription="@string/back_icon"
        android:onClick="irInicio"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtPalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_color"
        android:fontFamily="@font/shortstack_regular"
        android:padding="8dp"
        android:text="@string/create_word"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <VideoView
                android:id="@+id/vvwVideo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/btnVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_newword"
                android:fontFamily="@font/shortstack_regular"
                android:onClick="buscarVideo"
                android:text="@string/video"
                android:textAllCaps="false"
                android:textColor="@color/celeste"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <ImageView
                android:id="@+id/imvImagen"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/picture"
                android:visibility="gone"
                tools:srcCompat="@tools:sample/avatars" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/btnImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_newword"
                android:fontFamily="@font/shortstack_regular"
                android:onClick="buscarImagen"
                android:padding="8dp"
                android:text="@string/picture"
                android:textAllCaps="false"
                android:textColor="@color/celeste"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/shortstack_regular"
                android:hint="@string/word"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>