<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dlMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celeste"
    tools:context=".PlayerActivity">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlNavegacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp">

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:onClick="verMenu"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/menu" />

            <LinearLayout
                android:id="@+id/llNombreApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imvIcono"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_logo"
                    app:srcCompat="@drawable/saloblanco"/>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/txtApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/shortstack_regular"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnAyuda"
                android:layout_width="16dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ayuda" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlActividad"
            android:layout_below="@+id/rlNavegacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnRegresar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/backarrow"
                android:background="@null"
                android:contentDescription="@string/back_icon"
                android:onClick="irInicio" />

            <TextView
                android:id="@+id/txtAprende"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rect_violeta"
                android:fontFamily="@font/shortstack_regular"
                android:padding="8dp"
                android:text="@string/learn"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrPalabra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlActividad"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imvAprende"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/givYahoo"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone">
                </pl.droidsonroids.gif.GifImageView>

                <TextView
                    android:id="@+id/txtVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imvAprende"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/shortstack_regular"
                    android:text="@string/word"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/llBotones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtVideo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnReproducir"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/rect_blue"
                        android:onClick="reproducirVideo"
                        android:src="@drawable/miniplay" />

                    <Space
                        android:layout_width="64dp"
                        android:layout_height="match_parent" />

                    <ImageButton
                        android:id="@+id/btnYahoo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/rect_blue"
                        android:onClick="yahoo"
                        android:src="@drawable/yahoo" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llModEli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llBotones"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnModificar"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rect_blanco"
                        android:drawableStart="@drawable/modify"
                        android:fontFamily="@font/shortstack_regular"
                        android:gravity="center"
                        android:onClick="modificarPalabra"
                        android:paddingHorizontal="8dp"
                        android:text="@string/modify"
                        android:textAllCaps="false"
                        android:textColor="@color/violet"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/btnEliminar"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rect_blanco"
                        android:drawableStart="@drawable/delete"
                        android:fontFamily="@font/shortstack_regular"
                        android:gravity="center"
                        android:onClick="eliminarPalabra"
                        android:paddingHorizontal="8dp"
                        android:text="@string/delete"
                        android:textAllCaps="false"
                        android:textColor="@color/violet"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/rltVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlNavegacion"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone">

            <VideoView
                android:id="@+id/vvwAprende"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabRegresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="regresarPalabra"
                android:src="@drawable/backarrow"
                app:backgroundTint="@color/dark_blue" />

            <ImageView
                android:id="@+id/imvAprendeMini"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>